--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,19 @@
+stringr 0.3
+===========
+
+ * fixed() now also escapes |
+ * str_join() renamed to str_c()
+ * all functions more carefully check input and return informative error
+   messages if not as expected.
+ * add invert_match() function to convert a matrix of location of matches to
+   locations of non-matches
+ * add fixed() function to allow matching of fixed strings.
+
 stringr 0.2
 ===========
 
  * str_length now returns correct results when used with factors
  * str_sub now correctly replaces Inf in end argument with length of string
- * new function str_split_fixed returns fixed number of splits in a character matrix
+ * new function str_split_fixed returns fixed number of splits in a character
+   matrix
  * str_split no longer uses strsplit to preserve trailing breaks
