--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+stringr 0.4
+===========
+
+ * all functions now vectorised with respect to string, pattern (and
+   where appropriate) replacement parameters
+ * fixed() function now tells stringr functions to use fixed matching, rather
+   than escaping the regular expression.  Should improve performance for 
+   large vectors.
+ * new ignore.case() modifier tells stringr functions to ignore case of
+   pattern.
+ * str_replace renamed to str_replace_all and new str_replace function added.
+   This makes str_replace consistent with all functions.
+ * new str_sub<- function (analogous to substring<-) for substring replacement
+ * str_sub now understands negative positions as a position from the end of
+   the string. -1 replaces Inf as indicator for string end.
+ * str_pad side argument can be left, right, or both (instead of center)
+ * str_trim gains side argument to better match str_pad
+ * stringr now has a namespace and imports plyr (rather than requiring it)
+
 stringr 0.3
 ===========
 
