--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+stringr 0.6
+===========
+
+* new modifier `perl` that switches to Perl regular expressions
+
+* `str_match` now uses new base function `regmatches` to extract matches -
+  this should hopefully be faster than my previous pure R algorithm
+
 stringr 0.5
 ===========
 
