--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+stringr 0.6.1
+=============
+
+* Zero input to `str_split_fixed` returns 0 row matrix with `n` columns
+
+* Export `str_join`
+
 stringr 0.6
 ===========
 
